--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.3.1",
     "sanity": "^4.10.0",
     "styled-components": "^6.1.19",
+    "swiper": "^12.1.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
